feat : 파라미터 검증 Exception 수정, Optional NullPointException 발생 문제 수정